<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quotation</string>
    <string name="title_activity_home">Quote Feed</string>

    <!-- Search -->
    <string name="search_instruction">Try searching with different keywords to find the best results.</string>
    <string name="search_hint">Search</string>
    <string name="search_button">Search</string>
    <string name="search_result">Result</string>

    <!-- Menu -->
    <string name="logout">Logout</string>

    <string name="title_activity_guide">Quotations</string>
    <string name="skip">Skip</string>
    <string name="endGuide">Got it!</string>


    <!-- Signin -->
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="skipSignin">Skip</string>

    <!-- Signin Messages -->
    <string name="signin_connection_error">Cannot connect to server. Check your internet connection please.</string>
    <string name="signin_incorrect_user_pass">Username and password is incorrect.</string>
    <string name="signin_unknown_error">Something was wrong. Try again later please.</string>

    <!-- Signup -->
    <string name="register">Sign up / Sign in</string>
    <string name="register_detail">Sign in to add comment and like quotes or </string>
    <string name="register_skip">Continue without registration</string>


    <!-- Signup Messages -->
    <string name="signup_connection_error">Cannot connect to server. Check your internet connection please.</string>
    <string name="signup_user_exist">Username is taken. Choose a different username please.</string>
    <string name="signup_invalid_email">Email is incorrect. Try again please.</string>
    <string name="signup_unknown_error">Something was wrong. Try again later please.</string>
    <string name="signup_password_does_not_match">Password does not match the confirm password.</string>


    <!-- signup page -->
    <string name="title_activity_signup">SignupActivity</string>
    <string name="button_go_to_sign_in">Sign in</string>
    <string name="button_signup_skip">Skip</string>
    <string name="button_signup_done">Done</string>
    <string name="text_email_label">Email</string>
    <string name="text_new_user_name_label">Username</string>
    <string name="text_new_password_label">Password</string>
    <string name="text_confirm_password_label">Confirm Password</string>
    <string name="hint_email">abc@example.com</string>
    <string name="hint_new_user_name">Username</string>
    <string name="hint_new_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <!-- signin page -->
    <string name="title_activity_signin">SigninActivity</string>
    <string name="button_go_to_sign_up">Sign up</string>
    <string name="button_signin_cancel">Cancel</string>
    <string name="text_user_name_label">Username</string>
    <string name="text_password_label">Password</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>

    <string name="favorites">Favorites</string>
    <string name="favorite_inactive">Favorite</string>
    <string name="favorite_active">Favorite</string>
    <string name="like_inactive">Like</string>
    <string name="like_active">Liked</string>

    <string name="no_result_found">Your search did not match any quote. Try different keywords please.</string>
    <string name="ask_for_registration">Please register to use all features.</string>
    <string name="no_favorite_found">Your favorite list is empty.</string>

</resources>
