<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/text_new_user_name_label"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext"
            android:id="@+id/etNewUserName"
            android:inputType="text"
            style="@style/EditText"
            android:textColor="#000"
            android:hint="@string/hint_new_user_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/text_email_label"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext"
            android:id="@+id/etEmail"
            android:textColor="#000"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_new_password_label"
            android:textColor="#000"
            android:id="@+id/tvNewPasswordLabel"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext"
            android:id="@+id/etNewPassword"
            android:inputType="textPassword"
            android:textColor="#000"
            android:hint="@string/hint_new_password"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/text_confirm_password_label"
            android:id="@+id/tvConfirmPasswordLabel"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext"
            android:id="@+id/etConfirmPassword"
            android:inputType="textPassword"
            android:textColor="#000"
            android:hint="@string/hint_confirm_password"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="300dp"
        style="@style/btnStyleOrange"
        android:text="@string/signup"
        android:layout_gravity="center"
        android:onClick="signup"/>

    <TextView
        android:id="@+id/signupMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="#000"
        android:layout_gravity="center"/>
</LinearLayout>